# dolly-linux

./: CMakeLists.txt  Dockerfile  Dockerfile.dev  Makefile  README.md  toolchain.cmake
.devcontainer/: devcontainer.json
.github/workflows/: docker-image.yml
config/: syslinux.cfg
kernel/: CMakeLists.txt
scripts/: check-host.sh  make-distro.sh
scripts/make-distro/: 01-build-user-space.rb  02-build-kernel.rb  main.rb
userspace/: CMakeLists.txt  Makefile
userspace/crt0/: CMakeLists.txt  Makefile  crt0.asm
userspace/libc/: CMakeLists.txt  Makefile
userspace/libc/include/: assert.h  ctype.h  dirent+.h  dirent.h  errno.h  fcntl.h  fd_set.h  float.h  fnctl.h  limits.h  locale.h  math.h  poll.h  setjmp.h  signal.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio+.h  stdio.h  stdlib+.h  stdlib.h  string.h  termios.h  time.h  unistd.h  which+.h
userspace/libc/include/sys/: ioctl.h  mount.h  select.h  stat.h  types.h  wait.h
userspace/libc/src/: crt.h  crt0.asm  ctype.c  dirent+.c  fcntl.c  fnctl.c  linux_dirent.h  locale.c  macros.h  poll.c  setjmp.c  signal.c  stdio+.c  stdio.c  stdlib+.c  stdlib.c  string.c  sys_ioctl.c  sys_mount.c  sys_select.c  sys_stat.c  sys_wait.c  syscalls.asm  syscalls.h  time.c  todo+.c  todo.c  todo.h  unistd.c  which+.c
userspace/libm/: CMakeLists.txt
userspace/libm/src/: math.c
userspace/ports/: CMakeLists.txt
userspace/ports/lua/: 01-add-dolly-platform.patch  CMakeLists.txt
